Version 1.3.6 : [Date]

    - Remove succession processes from area summary file.
    - Changed extension of text data files to .csv.

Version 1.3.5 : September 9, 2016

    - Fixed writing Keane relational data in .spatialrelate and .area files
    - Changed downwind calculation from 180 degrees to 90 degrees
    - Invalid process probability logic no longer saved with user knowledge
    - Reworded invalid process warning displayed when user knowledge loaded
    - Loading user knowledge incompatible with current zone now displays error
    - Re-enable Area Summary Files
    - Area Summary Files are now an optional simulation parameter

Version 1.3.4 : August 26, 2016

    - Fixed Duplicate Rule Function in Fire Regeneration Dialog
    - Fixed exception raised while saving process probability logic to a knowledge file
    - Fixed exception raised while running a simulation with fire suppression

Version 1.3.3 : August 24, 2016

    - Fixed double counting bug in SIMPPLLE spreading algorithm
    - Fixed missing constructor error while loading simdata files

Version 1.3.2 : August 17, 2016

    - Added property dialog to file menu
    - Standardized csv output in detailed logging
    - Fixed hang while creating new areas
    - Fixed exception during first simulation time step
    - Added a simulation option to specify a random seed

Version 1.3.1 : August 4, 2016

    - Simulation now defaults to text output without GIS/spread files
    - Fixed hang while loading user knowledge with illegal process probabilities
    - Fixed ConcurrentModificationException while loading EastSide Region One
    - Fixed bug that limited fire spotting distance
    - Replaced radio buttons in new area dialog with regular buttons
    - Replaced description textfield with label in relative position dialog
    - Relative wind position now calculated properly during Keane spreading
    - Keane Spread Logic Parameters are now stored in System Knowledge files

Version 1.3.0 : July 11, 2016
