@@ -2,6 +2,7 @@ Version 1.3.6 : [Date]
 
     - Remove succession processes from area summary file.
     - Changed extension of text data files to .csv.
+    - Added Probability String lookup file.
 
 Version 1.3.5 : September 9, 2016
 
